--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,19 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="format-detection" content="telephone=no" />
     <title>Jimu-Mobile demo</title>
+    <script type="text/javascript">
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('./service-worker.js').then(function(registration) {
+            // Registration was successful
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          }, function(err) {
+            // registration failed :(
+            console.log('ServiceWorker registration failed: ', err);
+          });
+        });
+      }
+    </script>
   </head>
   <body>
     <div id="root" class="container"></div>
