--- a/example/index.html
+++ b/example/index.html
@@ -12,6 +12,9 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <meta name="HandheldFriendly" content="true">
     <meta name="format-detection" content="telephone=no" />
+    <link rel="apple-touch-icon" href="logo.png">
+    <link rel="manifest" href="/manifest.json">
+
     <title>Jimu-Mobile demo</title>
     <script type="text/javascript">
       if ('serviceWorker' in navigator) {
