--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,7 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="format-detection" content="telephone=no" />
     <link rel="apple-touch-icon" href="logo.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
     <title>Jimu-Mobile demo</title>
     <script type="text/javascript">
