--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,11 @@
     <meta name="format-detection" content="telephone=no" />
     <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="manifest.json">
-
+    <style type="text/css">
+      #rootContent{
+        background-color: #2196F3 !important;
+      }
+    </style>
     <title>Jimu-Mobile demo</title>
     <script type="text/javascript">
       if ('serviceWorker' in navigator) {
