--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <meta name="HandheldFriendly" content="true">
     <meta name="format-detection" content="telephone=no" />
-    <meta name=theme-color content=#2196F3>
+    <meta name=theme-color content='#F0F0F0'>
     <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="manifest.json">
     <title>Jimu-Mobile demo</title>
