--- a/demo/index.html
+++ b/demo/index.html
@@ -12,9 +12,14 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <meta name="HandheldFriendly" content="true">
     <meta name="format-detection" content="telephone=no" />
-    <meta name=theme-color content='#CCCCCC'>
+    <meta name=theme-color content=#2196F3>
     <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="manifest.json">
+    <style type="text/css">
+      #rootContent{
+        background-color: #2196F3 !important;
+      }
+    </style>
     <title>Jimu-Mobile demo</title>
     <script type="text/javascript">
       if ('serviceWorker' in navigator) {
