--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
     <link rel="manifest" href="manifest.json">
     <style type="text/css">
       #rootContent{
+        /*0F826B绿色，，，F44432 红色   2196F3 蓝 色*/
         background-color: #2196F3 !important;
       }
     </style>
