--- a/demo/index.html
+++ b/demo/index.html
@@ -17,8 +17,8 @@
     <link rel="manifest" href="manifest.json">
     <style type="text/css">
       #rootContent{
-        /*0F826B绿色，，，F44432 红色   2196F3 蓝 色*/
-        background-color: #2196F3 !important;
+        /*0F826B绿色，，，F44432 红色   2196F3 蓝色  F4D009 黄色*/
+        background-color: #F4D009 !important;
       }
     </style>
     <title>Jimu-Mobile demo</title>
