fix iphonex header

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,7 @@
     <meta name=theme-color content=#2196F3>
     <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="manifest.json">
+    <meta name='viewport' content='initial-scale=1,viewport-fit=cover'>
     <style type="text/css">
       #rootContent{
         /*0F826B绿色，，，F44432 红色   2196F3 蓝色  F4D009 黄色*/
